--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
         "natives": "^1.1.6"
     },
     "devDependencies": {
-        "browser-sync": "^2.24.5"
+        "browser-sync": "arfeo/browser-sync"
     }
 }
